fixed navview wrap on ie11

--- a/packages/reactor-kitchensink/ext-react/packages/theme-kitchensink/sass/etc/all.scss
+++ b/packages/reactor-kitchensink/ext-react/packages/theme-kitchensink/sass/etc/all.scss
@@ -141,4 +141,6 @@ $content-panel-grid-background: dynamic(darken($content-panel-grid-line, 5%));
   font-size: 18px;
 }
 
-
+.app-navview > .x-body-el > .x-component {
+  max-width: 100%;
+}
